--- a/layouts/shortcodes/schedule.html
+++ b/layouts/shortcodes/schedule.html
@@ -7,7 +7,7 @@
             {{- if .header }}
 
             <td style="width:5%;text-align:center" class="mid-table-header">Week</td>
-            <td style="width:10%;text-align:right" class="mid-table-header">Date</td>
+            <td style="width:10%;text-align:left" class="mid-table-header">Date</td>
             <td style="width:10%;text-align:left" class="mid-table-header">Topic</td>
             <td style="width:10%;text-align:left" class="mid-table-header">Reading</td>
             <td style="width:10%;text-align:center" class="mid-table-header">Assignment</td>
@@ -16,7 +16,7 @@
             {{- else }}
 
             <td align="center" style="width:2%;text-align:right">{{ .weeknum }}</td>
-            <td align="right" style="width:20%;text-align:right">{{ .date }}</td>
+            <td align="left" style="width:20%;text-align:left">{{ .date }}</td>
             <td style="width:50%;text-align:left">{{ .title | markdownify }}</td>
 
             {{- if .reading }}
@@ -30,7 +30,7 @@
 
             {{- if .assignment }}
             <td align="center" style="width:10%;text-align:center"><a
-                    href="{{ .Site.baseurl }}/assignment/{{ .assignment }}/">
+                    href="{{ .Site.baseurl }}/assignments/{{ .assignment }}/">
                     <i class="fas fa-laptop-code"></i></a></td>
             {{- else }}
             <td align="center" style="width:10%;text-align:center">
