first parts of ps0

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -91,6 +91,10 @@ footer p {
     padding-left: 2em;
 }
 
+.bordered-image img {
+    border: 2px solid;
+}
+
 .footnotes {
     font-size: 0.8rem;
     line-height: 1.3;
