--- a/layouts/shortcodes/schedule.html
+++ b/layouts/shortcodes/schedule.html
@@ -31,7 +31,7 @@
             {{- if .assignment }}
             <td align="center" style="width:10%;text-align:center"><a
                     href="{{ .Site.baseurl }}/assignments/{{ .assignment }}/">
-                    <i class="fas fa-laptop-code"></i></a></td>
+                    <i class="fas fa-laptop-code"></i> {{ .assignment_label }}</a></td>
             {{- else }}
             <td align="center" style="width:10%;text-align:center">
                 <font color="f1f1f1">
